--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,11 @@ install:
 
 script:
   - npm run build
+
+deploy:
+  provider: pages
+  skip-cleanup: true
+  github-token: $GITHUB_TOKEN
+  local_dir: dist
+  on:
+    branch: master
