--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ deploy:
   provider: pages
   skip-cleanup: true
   github-token: $GITHUB_TOKEN
-  local_dir: dist
+  local_dir: docs/.vuepress/dist
   on:
     branch: master
