--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "openmusic_reskin",
   "version": "1.0.0",
   "main": "layouts/Layout.vue",
-  "homepage": "http://rodericasm.github.io/openmusictheory_reskinned",
-  "repository": "https://github.com/rodericasm/openmusictheory_reskinned.git",
+  "homepage": "http://rodericasm.github.io/openmusictheory",
+  "repository": "https://github.com/rodericasm/openmusictheory.git",
   "author": "rodericasm <rodericasm@gmail.com>",
   "license": "MIT",
   "devDependencies": {
